# ai_image_gen

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  build_and_push.sh  clean_up.sh  pyproject.toml  requirements.txt  setup.py  template_readme.md  unused_code.txt
deployment/: Dockerfile  Dockerfile.gpu  README.md
docs/runpod_requests/: generate_image_sd-1.5.json  generate_image_sd-2.1.json  generate_image_stable-diffusion-xl-base-1.0.json
examples/: flux_image_generation_example.py  image_generation_example.py  image_processing_example.py  video_generation_example.py
src/: __init__.py  main.py  runpod_handler.py
src/agent/: __init__.py  image_changer_agent.py  image_gen_agent.py  video_gen_agent.py
src/checkers/: device_checker.py
src/examples/: flux_image_generation_example.py  image_generation_example.py  image_processing_example.py  video_generation_example.py
src/models/: __init__.py  image_generator.py  image_processor.py  video_generator.py
src/models/utils/: __init__.py  image_models_util.py  video_models_util.py
src/processors/: __init__.py  langchain_orchestrator.py
src/utils/: __init__.py  config.py  file_uploader.py
tests/: __init__.py  run_tests.py  test_imports.py  test_runpod_imports.py
tests/agent/: __init__.py  test_image_changer_agent.py  test_image_gen_agent.py  test_video_gen_agent.py
